<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
      xmlns:card_view="http://schemas.android.com/apk/res-auto"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:elevation="10dp"
      card_view:cardCornerRadius="2dp">

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="20dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/ui_input_title">
        </TextView>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="35dp"
          android:baselineAligned="false">

          <ImageView
            android:id="@+id/transmissionImage"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/ui_input_title"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <requestFocus/>
          </ImageView>

          <Button
            android:id="@+id/btnChangePhoto"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:elevation="5dp"
              android:enabled="false"
            android:onClick="onChangePhotoClicked"
            android:text="@string/ui_button_open">
          </Button>
        </LinearLayout>
      </FrameLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      xmlns:card_view="http://schemas.android.com/apk/res-auto"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginTop="8dp"
      android:elevation="10dp"
      card_view:cardCornerRadius="2dp">

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="20dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ui_encode_words">
        </TextView>

        <EditText
          android:id="@+id/editTextEncodingInformation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:hint="@string/ui_encode_hint"
          android:inputType="textCapWords"
          android:singleLine="true">
        </EditText>
      </FrameLayout>
    </android.support.v7.widget.CardView>

    <RadioGroup
      android:id="@+id/radioTransmissionMode"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      android:checkedButton="@+id/radioUniversalService"
      android:orientation="vertical">

      <RadioButton
        android:id="@+id/radioImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ui_input_type_image"/>

      <RadioButton
        android:id="@+id/radioVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ui_input_type_video">
      </RadioButton>

      <RadioButton
        android:id="@+id/radioUniversalService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ui_input_type_universal"
          android:checked="false">
      </RadioButton>
    </RadioGroup>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="5dp">

      <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:elevation="5dp"
        android:onClick="onStartClicked"
        android:text="@string/ui_button_start_transmission">
      </Button>

      <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:elevation="5dp"
            android:onClick="onCancelClicked"
            android:text="@string/ui_button_cancel_transmission">
      </Button>
    </LinearLayout>
  </LinearLayout>
</ScrollView>